<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout">

    <RelativeLayout
        android:id="@+id/bck_bttn_layout"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="-14dp"
            android:src="@drawable/back_button"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/txt_back_button"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignBottom="@+id/back_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/back"
            android:visibility="invisible"
            android:textSize="17sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#ffff"
        android:layout_marginStart="7dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/crs_img_menu"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        app:srcCompat="@drawable/menu_dot"
        android:scaleType="fitCenter"
        android:visibility="gone"
        android:contentDescription="@string/todo" />
</RelativeLayout>