<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    android:layout_marginEnd="10dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:id="@+id/main_relative"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#F8F5F5">

        <com.jackandphantom.circularimageview.RoundedImage
            android:id="@+id/video_img"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:src="@drawable/teacher"
            app:rounded_radius="20"
            android:scaleType="fitXY"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/info_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/video_img"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#000000"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/desc_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/app_name"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/dot_menu"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/dot"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/duration_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/duration"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
