<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_layout_vertical_Content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/layout">

                <RelativeLayout
                    android:id="@+id/tab_layout_bck_bttn_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/tab_layout_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_marginStart="-14dp"
                        android:src="@drawable/back_button"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/tab_layout_txt_back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_alignBottom="@+id/tab_layout_back_button"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="13dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:text="@string/back"
                        android:visibility="invisible"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/tab_layout_course_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/course_List"
                    android:textColor="@color/colorWhite"/>

                <ImageView
                    android:id="@+id/tab_layout_crs_menu"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:visibility="invisible"
                    android:src="@drawable/dotthirtyp"
                    android:contentDescription="@string/todo" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:tabGravity="center"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@color/colorPrimary"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:scrollX="@dimen/cardview_compat_inset_shadow"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>